--- a/src/app/modules/employeedetail/employeesearch/employeesearch.component.scss
+++ b/src/app/modules/employeedetail/employeesearch/employeesearch.component.scss
@@ -1,3 +1,9 @@
 mat-form-field,button{
     margin-right: 15px;
 }
+.mat-column-Active,.mat-column-EmployeeCode{
+    flex:0 0 100px;
+}
+.mat-column-Name,.mat-column-Department,.mat-column-Designation,.mat-column-Grade,.mat-column-Manager{
+    flex: 0 0 200px;
+}
