--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -1,7 +1,8 @@
 :host{
     display: grid;
     place-items: center;
-    
+    min-height: 92vh;
+    background-color:white;    
 }
 .container{
     display:flex;
@@ -16,8 +17,9 @@ button{
 }
 .mat-card{
     position: relative;
-    margin-top:100px; 
-    height: 350px;
+    height: max-content;
+    //margin-top:100px; 
+    margin: 60px;
     width: 50%;
 }
 .width100{
