--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -3,8 +3,9 @@
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <alert></alert>
-        <div class="container" fxLayout="row wrap" fxLayoutAlign="space-around center">
-                <form *ngIf="!isSuccessful" [formGroup]="RegistrationForm">
+        <div style="display: flex;flex-direction: column;justify-content: center; margin: 30px;">
+            <form *ngIf="!isSuccessful" [formGroup]="RegistrationForm">
+                <div>
                     <mat-form-field appearance="outline">
                         <mat-label>Name</mat-label>
                         <input formControlName="UserName" autocomplete="Off" #UserName matInput [maxlength]="50">
@@ -19,13 +20,16 @@
                         <span class="text-danger" *ngIf="f.ContactNo.touched && f.ContactNo.hasError('required')">
                             Contact No. is required.</span>
                     </mat-form-field>
+                </div>
+                <div>
                     <mat-form-field appearance="outline">
                         <mat-label>Organization Name</mat-label>
                         <input formControlName="OrganizationName" autocomplete="Off" matInput [maxlength]="50">
                         <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
-                        <span class="text-danger" *ngIf="f.OrganizationName.touched && f.OrganizationName.hasError('required')">
+                        <span class="text-danger"
+                            *ngIf="f.OrganizationName.touched && f.OrganizationName.hasError('required')">
                             Organisation name is required.</span>
-                    </mat-form-field>     
+                    </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Email</mat-label>
                         <input formControlName="Email" type="email" autocomplete="Off" matInput [maxlength]="50">
@@ -33,22 +37,25 @@
                         <span class="text-danger" *ngIf="f.Email.touched && f.Email.hasError('required')">
                             Email is required.</span>
                         <span *ngIf="f.Email.touched && f.Email.hasError('email')">
-                                Email must be a valid email address
-                            </span>
+                            Email must be a valid email address
+                        </span>
                     </mat-form-field>
+                </div>
+                <div>
                     <mat-form-field appearance="outline">
                         <mat-label>Password</mat-label>
                         <input formControlName="Password" type="password" matInput autocomplete="Off" [maxlength]="50">
                         <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
                         <span class="text-danger" *ngIf="f.Password.touched && f.Password.hasError('required')">
                             password is required.</span>
-                            <span *ngIf="f.Password.touched && f.Password.hasError('minlength')">
-                                Password must be at least 6 characters
-                            </span>
+                        <span *ngIf="f.Password.touched && f.Password.hasError('minlength')">
+                            Password must be at least 6 characters
+                        </span>
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Confirm Password</mat-label>
-                        <input formControlName="ConfirmPassword" type="password" autocomplete="Off" matInput [maxlength]="50">
+                        <input formControlName="ConfirmPassword" type="password" autocomplete="Off" matInput
+                            [maxlength]="50">
                         <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
                         <span class="alert-danger" *ngIf="f.ConfirmPassword.errors && f.submitted">
                             <span *ngIf="f.ConfirmPassword.errors.required">ConfirmPassword is required</span>
@@ -57,25 +64,28 @@
                             </span>
                         </span>
                     </mat-form-field>
-                    <div fxLayoutAlign="start">
-                        <button [disabled]="loading" class="mat-raised-button" (click)="onSave()" matTooltip="create">
-                            <mat-icon>create</mat-icon>
-                        </button>
-                        <button [disabled]="loading" (click)="gotohome()" class="mat-raised-button" matTooltip="cancel">
-                            <mat-icon>cancel</mat-icon>
-                        </button>
-                    </div>
-                    <div style="margin-top:15px;padding: 15px;" 
-                    class="alert alert-warning" 
-                    *ngIf="errorMessage.length>0"
-                    innerHTML="Signup failed!<br />{{ errorMessage }}">                        
-                    </div>
-                </form>
-                <div class="alert alert-success" *ngIf="isSuccessful">
-                    Please check and click on the link provided in your email for verification.
-                    <button [disabled]="loading" style="margin: 15px;" class="mat-raised-button" (click)="selectapps()">Select Applications</button>    
                 </div>
+                <div fxLayoutAlign="start">
+                    <button [disabled]="loading" class="mat-raised-button" (click)="onSave()" matTooltip="create">
+                        <mat-icon>create</mat-icon>
+                    </button>
+                    <button [disabled]="loading" (click)="gotohome()" class="mat-raised-button" matTooltip="cancel">
+                        <mat-icon>cancel</mat-icon>
+                    </button>
+                </div>
+                <div>
+                    <div style="margin-top:15px;padding: 15px;" class="alert alert-warning"
+                        *ngIf="errorMessage.length>0" innerHTML="Signup failed!<br />{{ errorMessage }}">
+                    </div>
+                </div>
+            </form>
+            <div class="alert alert-success" *ngIf="isSuccessful">
+                Please check and click on the link provided in your email for verification.
+                <button [disabled]="loading" style="margin: 15px;" class="mat-raised-button"
+                    (click)="selectplan()">Select
+                    Plan</button>
             </div>
+        </div>
         <!-- </div> -->
     </mat-card-content>
 </mat-card>
