--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -43,12 +43,12 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field appearance="outline">
-                    <input [disabled]="element.ParentId ==0
-                                       || Parent=='Information Restriction' 
+                    <input [disabled]="Parent=='Information Restriction' 
                                        || Parent=='Period Type'
                                        || Parent=='Roll No Generation' 
                                        || Parent=='Class Promotion'
-                                       || element.MasterDataName=='Cash'" matInput
+                                       || element.MasterDataName=='Cash'"
+                                       matInput
                         [value]="element.MasterDataName" [(ngModel)]="element.MasterDataName" autocomplete="Off"
                         placeholder="" (blur)="onBlur(element)" [minlength]="1" [maxlength]="50">
                 </mat-form-field>
@@ -101,13 +101,13 @@
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">
                 <button style="margin-right: 15px;"
                     [disabled]="loading || Permission=='read' || Parent=='Information Restriction'"
-                    matTooltip="new item" *ngIf="enableAddNew" class="mat-raised-button" (click)="AddData()">
+                    matTooltip="new item" class="mat-raised-button" (click)="AddData()">
                     <mat-icon>add</mat-icon>
                 </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                    [checked]="element.Active">
+                    [checked]="element.Active==1?true:false">
                 </mat-checkbox>
             </mat-cell>
         </ng-container>
@@ -119,7 +119,10 @@
                 </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
-                <button [disabled]="loading || !element.Action || Permission=='read' || element.ParentId ==0" matTooltip="view/edit"
+                <button [disabled]="loading 
+                || !element.Action 
+                || Permission=='read'" 
+                matTooltip="view/edit"
                     mat-mini-fab (click)="SaveRow(element)">
                     <mat-icon>save</mat-icon>
                 </button>
@@ -127,7 +130,7 @@
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: DisplayColumns;">
+        <mat-row *matRowDef="let row; columns: DisplayColumns;" style="display: flex;place-items:baseline;">
         </mat-row>
     </mat-table>
     <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
