--- a/src/app/modules/globaladmininitial/customerplans/customerplans.component.scss
+++ b/src/app/modules/globaladmininitial/customerplans/customerplans.component.scss
@@ -1,3 +1,9 @@
+:host{
+    display: flex;
+    justify-content: start;
+    min-height: 92vh;
+    background-color: white;
+}
 .mat-form-field{
     margin-right: 15px;
     width:98%;
@@ -5,10 +11,12 @@
 .mat-column-LoginUserCount,
 .mat-column-PersonOrItemCount,
 .mat-column-Active,
+.mat-column-Action,
 .mat-column-MinCount,
 .mat-column-MinPrice,
 .mat-column-PCPM,
-.mat-column-AmountPerMonth
+.mat-column-AmountPerMonth,
+.mat-column-PlanName
 {
     flex:0 0 100px;
 }
