--- a/src/app/modules/globaladmininitial/planandmasteritem/planandmasteritem.component.html
+++ b/src/app/modules/globaladmininitial/planandmasteritem/planandmasteritem.component.html
@@ -6,7 +6,7 @@
 <form [formGroup]="searchForm">
     <mat-form-field appearance="outline" [style.width.px]="200" style="margin-right:15px;">
         <mat-label>Plan</mat-label>
-        <mat-select #searchPlanId formControlName="searchPlanId">
+        <mat-select #searchPlanId formControlName="searchPlanId" (selectionChange)="ClearDisplay()">
             <mat-option [value]="0">select</mat-option>
             <mat-option *ngFor="let feature of Plans" [value]="feature.PlanId">
                 {{feature.Title}}
@@ -34,7 +34,6 @@
     <button [disabled]="loading" matTooltip="search" class="mat-raised-button" (click)="GetPlanAndMasterItem()">
         <mat-icon>search</mat-icon>
     </button>
-
 </form>
 <br>
 <mat-table #table [dataSource]="dataSource" matSort>
