--- a/src/app/modules/schoolreports/today-collection/today-collection.component.html
+++ b/src/app/modules/schoolreports/today-collection/today-collection.component.html
@@ -23,8 +23,11 @@
     </div>
 </form>
 
-<mat-table #table [dataSource]="dataSource" matSort>
-
+<mat-table style="min-width: 600px;" #table [dataSource]="dataSource" matSort>
+    <!-- <ng-container matColumnDef="{{column}}" *ngFor="let column of DisplayColumns">
+        <mat-header-cell *matHeaderCellDef> {{column}} </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element[column]}} </mat-cell>
+    </ng-container> -->
     <ng-container matColumnDef="Student">
         <mat-header-cell *matHeaderCellDef> Student </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.Student}} </mat-cell>
@@ -38,7 +41,7 @@
         <mat-cell *matCellDef="let element"> {{element.ReceiptDate|date:'dd-MM-yyyy'}} </mat-cell>
     </ng-container>
     <ng-container matColumnDef="ReceiptNo">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> ReceiptNo </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Receipt No. </mat-header-cell>
         <mat-cell *matCellDef="let element">
             {{element.ReceiptNo}}
         </mat-cell>
@@ -55,8 +58,25 @@
             {{element.TotalAmount}}
         </mat-cell>
     </ng-container>
+    <!-- Expanded Content Column - The detail row is made up of this one column -->
+    <ng-container matColumnDef="expandedDetail">
+        <mat-cell *matCellDef="let row" style="display: flex;flex-direction: column;align-items: flex-start;">
+            <div style="padding:5px;display:flex;flex-direction: row;background-color:lightgray;border-bottom:1px solid lightgray ;">
+                <div class="mat-header-cell" style="width: 150px;">Fee Name</div>
+                <div class="mat-header-cell" style="display: flex;justify-content: center; width: 150px;">Amount</div>
+            </div>
+            <div style="display:flex;flex-direction: row;" *ngFor="let voucher of row.element.AccountingVouchers">
+                <div style="padding-bottom: 5px;border-bottom: 1px solid lightgray; width: 150px;">{{voucher.ClassFee.FeeDefinition.FeeName}}</div>
+                <div style="display:flex;justify-content: end;border-bottom: 1px solid lightgray; padding-bottom: 5px;width: 150px;">{{voucher.Amount}}</div>
+            </div>
+        </mat-cell>
+    </ng-container>
+
     <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center" fxLayout="row">
+    <mat-row *matRowDef="let row; columns: DisplayColumns;" matRipple class="element-row"
+        [class.expanded]="expandedElement == row" (click)="expandedElement = row"></mat-row>
+    <mat-row *matRowDef="let row; columns: ['expandedDetail']; when: isExpansionDetailRow"
+        [@detailExpand]="row.element == expandedElement ? 'expanded' : 'collapsed'" style="overflow: hidden">
     </mat-row>
 </mat-table>
 <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
@@ -67,7 +87,7 @@
             style="padding: 15px 15px 0px 20px; min-width:450px; display: flex;flex-direction: row;justify-content: center;align-items: center;">
 
             <div style="width:100%;">{{item.FeeCategory}}</div>
-            <div style="width:100%;align-items:flex-end;">&#x20b9; {{item.Amount}}</div>
+            <div style="width:100%;display: flex;justify-content: end;">&#x20b9; {{item.Amount}}</div>
 
         </div>
     </div>
@@ -76,9 +96,9 @@
         <div *ngFor="let item of GroupByPaymentType"
             style="padding: 15px 15px 0px 20px; min-width:450px; display: flex;flex-direction: row;justify-content: center;align-items: center;">
             <div style="width:100%;">{{item.PaymentType}}</div>
-            <div style="width:100%;align-items:flex-end;">&#x20b9; {{item.TotalAmount}}</div>
+            <div style="width:100%;display: flex;justify-content: end;">&#x20b9; {{item.TotalAmount}}</div>
         </div>
-    </div>    
+    </div>
 </div>
 <mat-divider style="width: 100%;"></mat-divider>
 <div fxLayout="row" fxLayoutAlign="end center" style="padding: 15px 15px 0px 20px; width:600px;">
@@ -88,4 +108,3 @@
 </div>
 
 <hr style="color:lightgrey;">
-
