--- a/src/app/modules/schoolreports/today-collection/today-collection.component.scss
+++ b/src/app/modules/schoolreports/today-collection/today-collection.component.scss
@@ -1,4 +1,25 @@
-.mat-column-TotalAmount{
-    display: grid;
+.mat-column-TotalAmount {
+    display    : grid;
     place-items: center end;
+}
+
+.mat-table {
+    overflow  : auto;
+    max-height: 500px;
+}
+
+.element-row {
+    position: relative;
+}
+
+.element-row:not(.expanded) {
+    cursor: pointer;
+}
+
+.element-row:not(.expanded):hover {
+    background: #f5f5f5;
+}
+
+.element-row.expanded {
+    border-bottom-color: transparent;
 }
