--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -16,7 +16,7 @@
                         </ng-template>
                         <div fxLayout="row" fxLayoutAlign="start space-around">
                             <div style="width:50%">
-                                <mat-table #table [dataSource]="dataSource">
+                                <mat-table #table [dataSource]="dataSource" style="min-width: 400px;">
                                     <ng-container matColumnDef="SlNo">
                                         <mat-header-cell *matHeaderCellDef> Sr.No. </mat-header-cell>
                                         <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
@@ -137,6 +137,11 @@
                     </mat-tab>
                 </mat-tab-group>
             </div>
+        </div>
+        <div>
+            <button [disabled]="loading" (click)="back()" class="mat-raised-button">
+                <mat-icon>arrow_back</mat-icon>
+            </button>
         </div>
     </mat-card-content>
 </mat-card>
