all pwd related added

--- a/src/app/modules/auth/change-password/change-password.component.scss
+++ b/src/app/modules/auth/change-password/change-password.component.scss
@@ -1,9 +1,10 @@
 :host{
-    width: 100%;
     display: grid;
     place-items: center;
-    
+    min-height: 92vh;
+    background-color:white;    
 }
+
 .container{
     display: flex;
     justify-content: center;
@@ -14,10 +15,10 @@ button{
 .column{
     margin-right: 15px;
 }
-.mat-card{
-    position: relative;
-    margin-top:220px; 
-}
+// .mat-card{
+//     position: relative;
+//     margin-top:220px; 
+// }
 .width100{
     width: 100%;
 }
