--- a/src/app/modules/auth/forgotpassword/forgotpassword.component.scss
+++ b/src/app/modules/auth/forgotpassword/forgotpassword.component.scss
@@ -1,16 +1,11 @@
 :host{
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
     min-height: 91vh;
     background-color:white;    
 }
-.container{
-    display:flex;
-    //justify-content: center;
-    //margin-top: 150px;
-}
 button{
-    margin-right: 15px;
+    margin-right: 25px;
 }
 .column{
     margin-right: 15px;
@@ -22,9 +17,4 @@ button{
     margin: 60px;
     width: 50%;
 }
-.width100{
-    width: 100%;
-}
-.width80{
-    width: 40%;
-}
+
