--- a/src/app/modules/auth/resetpassword/resetpassword.component.html
+++ b/src/app/modules/auth/resetpassword/resetpassword.component.html
@@ -1,18 +1,11 @@
-<mat-card [ngClass]="{'width100':deviceXs,'width80':!deviceXs}">
+<mat-card>
     <mat-card-title style="margin: 30px;">Change Password</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <alert></alert>
-        <form *ngIf="!isSuccessful" style="margin:30px;display: flex;flex-direction: column;" 
-        [formGroup]="changepwdForm" novalidate>
-                <mat-form-field>
-                    <mat-label>Old Password</mat-label>
-                    <input type="password" matInput formControlName="OldPassword" autocomplete="Off"
-                        required />
-                    <!-- <div class="alert-danger" *ngIf="f.OldPassword.errors && f.submitted">
-                        <div *ngIf="f.OldPassword.errors.required">Old password is required</div>
-                    </div> -->
-                </mat-form-field>
+        <form *ngIf="!isSuccessful" style="margin:30px;display: flex;flex-direction: column;" [formGroup]="resetpwdForm"
+         novalidate>
+               
                 <mat-form-field>
                     <mat-label>New Password</mat-label>
                     <input type="password" matInput formControlName="NewPassword"
@@ -39,7 +32,7 @@
                     <button [disabled]="loading" 
                     class="mat-raised-button"
                     (click)="onSubmit()"
-                    matTooltip="change">
+                    matTooltip="reset password">
                         <mat-icon>change_circle</mat-icon>
                     </button>
                     <button [disabled]="loading" (click)="gotohome()" class="mat-raised-button" matTooltip="cancel">
@@ -47,11 +40,11 @@
                     </button>
                 </div>
                 <div class="alert alert-warning" *ngIf="errorMessage.length>0">
-                    Signup failed!<br />{{ errorMessage }}
+                    {{ errorMessage }}
                 </div>
             </form>
             <div class="alert alert-success" *ngIf="isSuccessful">
-                Change password successful!<br>
+                Reset password successful!<br>
                 <a style="margin: 15px;" [routerLink]="[ '/auth/login']">
                     <mat-icon>login</mat-icon>
                 </a>
