--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -24,7 +24,7 @@
                     <mat-icon>login</mat-icon>login
                 </button>
                 <button [disabled]="loading" mat-menu-item *ngIf="!loggedIn" (click)="createlogin()">
-                    <mat-icon>create</mat-icon>Create login
+                    <mat-icon>create</mat-icon>Register
                 </button>
                 <button [disabled]="loading" mat-menu-item *ngIf="loggedIn" (click)="addUser()">
                     <mat-icon>user</mat-icon>Add User
