--- a/src/app/modules/auth/forgotpassword/forgotpassword.component.html
+++ b/src/app/modules/auth/forgotpassword/forgotpassword.component.html
@@ -7,7 +7,7 @@
         [formGroup]="forgotpwdForm" novalidate>
                 <mat-form-field>
                     <mat-label>Registered email</mat-label>
-                    <input type="email" matInput formControlName="email" autocomplete="Off"
+                    <input matInput formControlName="email" autocomplete="Off"
                         required />                    
                 </mat-form-field>     
                 To reset password, a link will be sent to your registered email address.           
@@ -28,7 +28,7 @@
             </form>
             <div class="alert alert-success" *ngIf="isSuccessful">
                 If email is registered with us, we are sending a link to you registered email address!<br>
-                <a style="margin: 15px;" [routerLink]="[ '/auth/login']">
+                <a matTooltip="login" style="margin: 15px;" [routerLink]="[ '/auth/login']">
                     <mat-icon>login</mat-icon>
                 </a>
             </div>
