--- a/src/app/modules/auth/resetpassword/resetpassword.component.html
+++ b/src/app/modules/auth/resetpassword/resetpassword.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title style="margin: 30px;">Change Password</mat-card-title>
+    <mat-card-title style="margin: 30px;">Reset Password</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <alert></alert>
