--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -32,7 +32,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
+                            <input matInput ng-pattern="/^[a-zA-Z0-9]*$/" (blur)="onBlur(element)" autocomplete="Off" [maxlength]="50"
                                 [value]="element.ClassName" [(ngModel)]="element.ClassName">
                         </mat-form-field>
                     </mat-cell>
@@ -42,7 +42,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
+                            <input type="number" matInput (blur)="onBlur(element)" autocomplete="Off" [max]="50"
                                 [value]="element.Sequence" [(ngModel)]="element.Sequence">
                         </mat-form-field>
                     </mat-cell>
@@ -91,7 +91,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" type="number" [max]="250"
+                            <input matInput (blur)="onBlur(element)" autocomplete="Off" type="number" [max]="1000"
                                 [value]="element.MinStudent" [(ngModel)]="element.MinStudent">
                         </mat-form-field>
                     </mat-cell>
@@ -101,7 +101,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" type="number" [max]="250"
+                            <input matInput (blur)="onBlur(element)" autocomplete="Off" type="number" [max]="1000"
                                 [value]="element.MaxStudent" [(ngModel)]="element.MaxStudent">
                         </mat-form-field>
                     </mat-cell>
