--- a/src/app/modules/dashboard/homedashboard/homedashboard.component.html
+++ b/src/app/modules/dashboard/homedashboard/homedashboard.component.html
@@ -1,24 +1,29 @@
 <mat-card>
-    <mat-card-title></mat-card-title>
+    <mat-card-title style="margin:30px 30px 0px 30px">Select Application</mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
-    <mat-card-content style="min-height: 100vh;margin-top:-100px; display: flex;flex-direction: column; align-items:center;justify-content: center;">        
-        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>    
-        <form [formGroup]="searchForm">
-                <mat-form-field [style.width.px]="250" appearance="outline">
-                    <mat-select formControlName="searchApplicationId">
-                        <mat-option *ngFor="let item of PermittedApplications" [value]="item.applicationId">
-                            {{item.applicationName}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field [style.width.px]="130" appearance="outline">
-                    <mat-select formControlName="searchBatchId" (selectionChange)="ChangeCurrentBatchId($event)">
-                        <mat-option *ngFor="let item of Batches" [value]="item.BatchId">{{item.BatchName}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <button [disabled]="loading" class="mat-raised-button" (click)="ChangeApplication()">
-                    <mat-icon>search</mat-icon>
-                </button>
-            </form>   
-            <button class="mat-button-raised" (click)="sendmessage()"><mat-icon>add</mat-icon></button>     
+    <!-- <mat-card-content style="min-height: 100vh;margin-top:-100px; display: flex;flex-direction: column; align-items:center;justify-content: center;">         -->
+    <mat-card-content>
+        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+        <form [formGroup]="searchForm" style="margin: 30px;">
+            <mat-form-field [style.width.px]="250" appearance="outline">
+                <mat-label>Application</mat-label>
+                <mat-select formControlName="searchApplicationId">
+                    <mat-option *ngFor="let item of PermittedApplications" [value]="item.applicationId">
+                        {{item.applicationName}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field [style.width.px]="130" appearance="outline">
+                <mat-label>Batch</mat-label>
+                <mat-select formControlName="searchBatchId" (selectionChange)="ChangeCurrentBatchId($event)">
+                    <mat-option *ngFor="let item of Batches" [value]="item.BatchId">{{item.BatchName}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button [disabled]="loading" class="mat-raised-button" (click)="ChangeApplication()">
+                <mat-icon>search</mat-icon>
+            </button>
+        </form>
+        <!-- <button class="mat-button-raised" (click)="sendmessage()">
+            <mat-icon>add</mat-icon>
+        </button> -->
     </mat-card-content>
 </mat-card>
