--- a/src/app/modules/student/searchstudent/searchstudent.component.scss
+++ b/src/app/modules/student/searchstudent/searchstudent.component.scss
@@ -1,3 +1,16 @@
+// :host{
+//     display: flex;
+//     justify-content: center;
+//     min-height: 91vh;
+//     background-color:white;    
+// }
+.mat-card{
+    position: relative;
+    height: 91vh;
+    margin: 0px 10px 10px 10px;
+    //width: 100%;
+}
+
 mat-form-field{
     margin-right: 20px;
     padding: 5px;
