--- a/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
+++ b/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
@@ -13,9 +13,13 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubject()">
+            <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubject(0)">
                 <mat-icon>search</mat-icon>
             </button>
+            <button [disabled]="loading" matTooltip="copy from previous batch" class="mat-raised-button" 
+            (click)="CopyFromPreviousBatch()">
+                <mat-icon>copy_all</mat-icon>
+            </button><br>
         </form>
         <mat-table #table [dataSource]="dataSource">
             <!-- <ng-container matColumnDef="ClassName">
