--- a/src/app/modules/ClassSubject/subject-types/subject-types.component.scss
+++ b/src/app/modules/ClassSubject/subject-types/subject-types.component.scss
@@ -8,3 +8,14 @@ mat-form-field{
 button{
     margin-right:15px;
 }
+.mat-column-SubjectTypeId,
+.mat-column-SelectHowMany{
+    flex:1 1 80px;
+}
+.mat-column-Active{
+    justify-content: center;
+    flex:0 0 100px;
+}
+.mat-column-Action,.mat-column-SubjectTypeName{
+    flex:1 1 150px;
+}
