--- a/src/app/modules/classes/classdetail/classdetail.component.scss
+++ b/src/app/modules/classes/classdetail/classdetail.component.scss
@@ -2,6 +2,9 @@ mat-form-field{
     margin-right: 15px;
     width:99%;
 }
+button{
+    margin-right: 15px;
+}
 .mat-column-ClassName{
     flex: 1 1 150px;
     padding-left: 0px;
@@ -17,7 +20,8 @@ mat-form-field{
     flex: 1 1 50px;
 }
 .mat-column-Sequence,.mat-column-DurationId,.mat-column-Active{
-    flex: 0 0 80px;
+    justify-content: center;
+    flex: 1 1 80px;
 }
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
     border-radius: 0px !important;
