--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
@@ -1,18 +1,6 @@
-<!-- <div style="margin: 15px;" fxLayout="column" fxLayoutAlign="center center">
-    <strong>Class Fee definition statuses for the current batch.</strong>
-    <mat-divider></mat-divider>
-    <br>
-    <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="center space-between">
-        <div *ngFor="let item of ClassStatuses">{{item.className}}
-            <mat-icon matTooltip="done" *ngIf="item.Done">done</mat-icon>
-            <mat-icon matTooltip="pending" *ngIf="!item.Done">pending</mat-icon>
-        </div>
-    </div>
-    <mat-divider></mat-divider>
-</div> -->
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Fee</strong></div>
+        <div><strong>Class Fee</strong></div>
     </div>
     <alert></alert>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
@@ -28,20 +16,16 @@
         <mat-form-field appearance="outline" style="width: 200px;">
             <mat-label>Month Year</mat-label>
             <mat-select formControlName="searchMonth">
+                <mat-option [value]="0">select</mat-option>
                 <mat-option *ngFor="let item of Months" [value]="item.val">{{item.MonthName}}</mat-option>
             </mat-select>
         </mat-form-field>
-        <!-- <mat-form-field appearance="outline" style="width: 200px;">
-            <mat-label>Fee name</mat-label>
-            <mat-select formControlName="FeeDefinitionId" #FeeName>
-                <mat-option value="0">---</mat-option>
-                <mat-option *ngFor="let p of FeeDefinitions" [value]="p.FeeDefinitionId">
-                    {{p.FeeName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field> -->
-        <button [disabled]="loading" class="mat-raised-button" (click)="GetClassFee()">
+        <button [disabled]="loading" matTooltip="search" class="mat-raised-button" style="margin-right: 15px;"
+            (click)="GetClassFee(StandardFilterWithBatchId,0)">
             <mat-icon>search</mat-icon>
+        </button>
+        <button [disabled]="loading" matTooltip="copy from previous batch" class="mat-raised-button" (click)="CopyFromPreviousBatch()">
+            <mat-icon>copy_all</mat-icon>
         </button><br>
     </form>
 
@@ -65,13 +49,19 @@
                         [value]="element.Amount" autocomplete="Off">
                 </mat-form-field>
             </mat-cell>
-        </ng-container>      
-        <!-- <ng-container matColumnDef="Month">
-            <mat-header-cell *matHeaderCellDef>Month</mat-header-cell>
+        </ng-container>
+        <ng-container matColumnDef="Month">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Year month </mat-header-cell>
             <mat-cell *matCellDef="let element">
-                {{element.MonthName}}
+                <mat-form-field appearance="outline" style="width: 200px;">
+                    <mat-label>Month Year</mat-label>
+                    <mat-select [(ngModel)]="element.Month" (selectionChange)="UpdateActive(element,$event)">
+                        <mat-option [value]="0">select</mat-option>
+                        <mat-option *ngFor="let item of Months" [value]="item.val">{{item.MonthName}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
             </mat-cell>
-        </ng-container> -->
+        </ng-container>
         <ng-container matColumnDef="Active">
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">Active </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;">
@@ -79,7 +69,7 @@
                     (change)="updateActive(element,$event)">
                 </mat-checkbox>
             </mat-cell>
-        </ng-container>       
+        </ng-container>
         <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">
                 <div *ngIf="ELEMENT_DATA.length>0">
@@ -89,12 +79,13 @@
                 </div>
             </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;">
-                <button [disabled]="loading || !element.Action || Permission =='read'" mat-mini-fab (click)="Save(element)">
+                <button [disabled]="loading || !element.Action || Permission =='read'" mat-mini-fab
+                    (click)="Save(element)">
                     <mat-icon>save</mat-icon>
                 </button>
             </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;" style="display: flex;justify-content:baseline"></mat-row>
     </mat-table>
     <mat-paginator [pageSizeOptions]="[5,10,20]"></mat-paginator>
