--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.scss
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.scss
@@ -8,14 +8,17 @@
     width       : 99%;
   }
 
-  .mat-column-ClassFeeId,
+  .mat-column-ClassFeeId{
+    flex: 1 1 70px;
+  }
+  
   .mat-column-Active,
   .mat-column-Action {
-    flex: 0 0 100px;
+    flex: 1 1 100px;
   }
 
   .mat-column-Amount,
   .mat-column-FeeName,
   .mat-column-Month {
-    flex: 0 0 150px;
+    flex: 1 1 150px;
   }
