--- a/src/app/modules/classes/feedefinition/feedefinition.component.html
+++ b/src/app/modules/classes/feedefinition/feedefinition.component.html
@@ -32,7 +32,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [maxlength]="250"
+                            <input matInput (blur)="onBlur(element)" autocomplete="Off"
                                 [value]="element.FeeName" [maxlength]="50" [(ngModel)]="element.FeeName">
                         </mat-form-field>
                     </mat-cell>
@@ -64,7 +64,7 @@
                     <mat-header-cell style="justify-content: center;" *matHeaderCellDef>Amount Editable
                     </mat-header-cell>
                     <mat-cell style="justify-content: center;" *matCellDef="let element">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateAmountEditable(element,$event)"
                             [checked]="element.AmountEditable==1?true:false">
                         </mat-checkbox>
                     </mat-cell>
@@ -93,7 +93,7 @@
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row style="width: 100%;" *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+                <mat-row style="width: 100%;display: flex;align-items: baseline;" *matRowDef="let row; columns: displayedColumns;"></mat-row>
             </mat-table>
             <mat-paginator [pageSizeOptions]="[10,20,50]"></mat-paginator>
         </div>
