--- a/src/app/modules/classes/school-fee-types/school-fee-types.component.html
+++ b/src/app/modules/classes/school-fee-types/school-fee-types.component.html
@@ -78,13 +78,10 @@
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;" style="display: flex;align-items: baseline;" class="element-row"></mat-row>
         </mat-table>
-        <div style="width:100%;background-color: lightgray;font-size: medium;padding: 10px;"> Below variables can be
-            applied
-            in the
-            formula.
+        <div style="width:100%;background-color: lightgray;font-size: medium;padding: 10px;margin:15px 15px 15px 0px"> Below variables can be
+            applied in the formula.
         </div>
         <div>StudentName, FeeName, Month*, MonthName, ClassName, SectionName, Amount</div>
         <div>* Month format: Year + month. Eg. 'Month' for the month of Jan 2021 is 202100, for Feb 2021 is 202101 and
-            so
-            on..</div>
+            so on..</div>
     </div>
