--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -26,7 +26,7 @@
                 <ng-container matColumnDef="StartDate">
                     <mat-header-cell *matHeaderCellDef> Start Date </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="130">
+                        <mat-form-field appearance="outline">
                             <mat-label>Start Date</mat-label>
                             <input [(ngModel)]="element.StartDate" [value]="element.StartDate" matInput [matDatepicker]="StartDate" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="StartDate"></mat-datepicker-toggle>
@@ -37,7 +37,7 @@
                 <ng-container matColumnDef="EndDate">
                     <mat-header-cell *matHeaderCellDef> End Date </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="130">
+                        <mat-form-field appearance="outline">
                             <mat-label>End Date</mat-label>
                             <input [value]="element.EndDate" [(ngModel)]="element.EndDate" 
                             matInput [matDatepicker]="EndDate" autocomplete="off">
